Decksplain/wwwroot/sass/components/card.scss
@use "../mixins";

.card-container {
    display: flex;
    flex-wrap: wrap;
    margin: -1rem;

    @include mixins.print {
        justify-content: center;
        margin: 0;
    }
}

.card {
    --border-width: 7px;

    position: relative;
    min-height: calc(3.5in * var(--scale-up));
    width: calc(2.5in * var(--scale-up));
    border-radius: 1rem;
    border: var(--border-width) solid var(--colour-primary);
    background-color: var(--colour-secondary);
    padding: calc(1rem - var(--border-width));
    margin: 1rem;
    overflow: hidden;

    @include mixins.print {
        --border-width: 1px;
        width: 2.5in;
        min-height: auto;
        height: 3.5in;
        margin: 0;
    }

    @include mixins.tablet {
        height: calc(3.5in * var(--scale-up));
    }

    header {
        display: flex;
        float:left;
        width: calc(100% - 6em);
        border-bottom: 1px solid var(--colour-primary);
        margin-bottom: var(--text-margin);
        
        a {
            color: var(--colour-primary);
            text-decoration: none;
            
            &:hover {
                h2 {
                    text-decoration: underline;
                }
            }
        }

        .card-info {
            margin-left: auto;
            text-align: right;

            p {
                margin: 0;
            }
        }
    }

    .qr {
        float: right;
        margin-left: 1rem;
        margin-bottom: 1rem;
    }
    
    p a {
        word-break: break-all;
    }
}

